<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/title_section1"
        android:layout_marginTop="20dp"
        android:id="@+id/textView"
        android:textStyle="bold|italic"
        android:typeface="serif" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/stage1_line1"
        android:id="@+id/textView3"
        android:layout_marginTop="60dp"
        android:layout_below="@+id/textView2"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_alignEnd="@+id/textView"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/stage1_line2"
        android:id="@+id/textView4"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/textView3"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_alignEnd="@+id/textView"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/stage1_line3"
        android:id="@+id/textView5"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/textView4"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_alignEnd="@+id/textView"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/stage1_line4"
        android:id="@+id/textView6"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/textView5"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_alignEnd="@+id/textView"
        android:textStyle="bold" />

</RelativeLayout>
</ScrollView>